// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add a review when: a user does NOT enter a valid grade then: we return 'Invalid grade' 1`] = `
<!DOCTYPE html>
<html lang="en-US">
  <head>
    <title>
    </title>
    <meta charset="UTF-8">
    <link rel="stylesheet"
          href="/stylesheets/application.css"
    >
  </head>
  <body>
    <header>
      <h1>
        <a href="/">
          The Ultimate Movie App
        </a>
      </h1>
    </header>
    <main>
      <ul>
        <li class="flash error">
          Invalid grade
        </li>
      </ul>
      <form action="/reviews/create"
            method="post"
      >
        <dl>
          <dt>
            <label for="title">
              Enter the title of a new movie:
            </label>
          </dt>
          <dd>
            <input type="text"
                   id="title"
                   name="title"
                   placeholder="title"
                   value="Point Break"
            >
          </dd>
          <dt>
            <label for="reviewer">
              Enter your name:
            </label>
          </dt>
          <dd>
            <input type="text"
                   id="reviewer"
                   name="reviewer"
                   placeholder="name"
                   value="Phillips"
            >
          </dd>
          <dt>
            <label for="grade">
              Enter your grade:
            </label>
          </dt>
          <dd>
            <select name="grade">
              <option value
                      disabled
                      selected
              >
                Choose one
              </option>
              <option value="A+">
                A+
              </option>
              <option value="A">
                A
              </option>
              <option value="A-">
                A-
              </option>
              <option value="B+">
                B+
              </option>
              <option value="B">
                B
              </option>
              <option value="B-">
                B-
              </option>
              <option value="C+">
                C+
              </option>
              <option value="C">
                C
              </option>
              <option value="C-">
                C-
              </option>
              <option value="D">
                D
              </option>
              <option value="F">
                F
              </option>
            </select>
          </dd>
          <dt>
            <label for="comments">
              What did you think of the movie?
            </label>
          </dt>
          <dd>
            <textarea id="comments"
                      name="comments"
                      rows="6"
                      cols="80"
                      placeholder="type your comments here"
            >
            </textarea>
          </dd>
        </dl>
        <fieldset class="actions">
          <input type="submit"
                 value="Submit Review"
          >
          <input type="reset"
                 value="Clear Form"
          >
        </fieldset>
      </form>
    </main>
  </body>
</html>
`;

exports[`add a review when: a user does NOT enter a valid reviewer then: we return 'Reviewer's name must be between 1 and 250 characters' 1`] = `
<!DOCTYPE html>
<html lang="en-US">
  <head>
    <title>
    </title>
    <meta charset="UTF-8">
    <link rel="stylesheet"
          href="/stylesheets/application.css"
    >
  </head>
  <body>
    <header>
      <h1>
        <a href="/">
          The Ultimate Movie App
        </a>
      </h1>
    </header>
    <main>
      <ul>
        <li class="flash error">
          Reviewer's name must be between 1 and 250 characters
        </li>
      </ul>
      <form action="/reviews/create"
            method="post"
      >
        <dl>
          <dt>
            <label for="title">
              Enter the title of a new movie:
            </label>
          </dt>
          <dd>
            <input type="text"
                   id="title"
                   name="title"
                   placeholder="title"
                   value="Point Break"
            >
          </dd>
          <dt>
            <label for="reviewer">
              Enter your name:
            </label>
          </dt>
          <dd>
            <input type="text"
                   id="reviewer"
                   name="reviewer"
                   placeholder="name"
                   value
            >
          </dd>
          <dt>
            <label for="grade">
              Enter your grade:
            </label>
          </dt>
          <dd>
            <select name="grade">
              <option value
                      disabled
                      selected
              >
                Choose one
              </option>
              <option value="A+">
                A+
              </option>
              <option value="A">
                A
              </option>
              <option value="A-">
                A-
              </option>
              <option value="B+">
                B+
              </option>
              <option value="B">
                B
              </option>
              <option value="B-">
                B-
              </option>
              <option value="C+">
                C+
              </option>
              <option value="C">
                C
              </option>
              <option value="C-">
                C-
              </option>
              <option value="D">
                D
              </option>
              <option value="F">
                F
              </option>
            </select>
          </dd>
          <dt>
            <label for="comments">
              What did you think of the movie?
            </label>
          </dt>
          <dd>
            <textarea id="comments"
                      name="comments"
                      rows="6"
                      cols="80"
                      placeholder="type your comments here"
            >
            </textarea>
          </dd>
        </dl>
        <fieldset class="actions">
          <input type="submit"
                 value="Submit Review"
          >
          <input type="reset"
                 value="Clear Form"
          >
        </fieldset>
      </form>
    </main>
  </body>
</html>
`;

exports[`add a review when: a user does NOT enter a valid title NOR a valid grade then: we return 'Movie title must be between 1 and 250 characters' AND 'Invalid grade' 1`] = `
<!DOCTYPE html>
<html lang="en-US">
  <head>
    <title>
    </title>
    <meta charset="UTF-8">
    <link rel="stylesheet"
          href="/stylesheets/application.css"
    >
  </head>
  <body>
    <header>
      <h1>
        <a href="/">
          The Ultimate Movie App
        </a>
      </h1>
    </header>
    <main>
      <ul>
        <li class="flash error">
          Movie title must be between 1 and 250 characters
        </li>
        <li class="flash error">
          Invalid grade
        </li>
      </ul>
      <form action="/reviews/create"
            method="post"
      >
        <dl>
          <dt>
            <label for="title">
              Enter the title of a new movie:
            </label>
          </dt>
          <dd>
            <input type="text"
                   id="title"
                   name="title"
                   placeholder="title"
                   value
            >
          </dd>
          <dt>
            <label for="reviewer">
              Enter your name:
            </label>
          </dt>
          <dd>
            <input type="text"
                   id="reviewer"
                   name="reviewer"
                   placeholder="name"
                   value="Phillips"
            >
          </dd>
          <dt>
            <label for="grade">
              Enter your grade:
            </label>
          </dt>
          <dd>
            <select name="grade">
              <option value
                      disabled
                      selected
              >
                Choose one
              </option>
              <option value="A+">
                A+
              </option>
              <option value="A">
                A
              </option>
              <option value="A-">
                A-
              </option>
              <option value="B+">
                B+
              </option>
              <option value="B">
                B
              </option>
              <option value="B-">
                B-
              </option>
              <option value="C+">
                C+
              </option>
              <option value="C">
                C
              </option>
              <option value="C-">
                C-
              </option>
              <option value="D">
                D
              </option>
              <option value="F">
                F
              </option>
            </select>
          </dd>
          <dt>
            <label for="comments">
              What did you think of the movie?
            </label>
          </dt>
          <dd>
            <textarea id="comments"
                      name="comments"
                      rows="6"
                      cols="80"
                      placeholder="type your comments here"
            >
            </textarea>
          </dd>
        </dl>
        <fieldset class="actions">
          <input type="submit"
                 value="Submit Review"
          >
          <input type="reset"
                 value="Clear Form"
          >
        </fieldset>
      </form>
    </main>
  </body>
</html>
`;

exports[`add a review when: a user does NOT enter a valid title then: we return 'Movie title must be between 1 and 250 characters' 1`] = `
<!DOCTYPE html>
<html lang="en-US">
  <head>
    <title>
    </title>
    <meta charset="UTF-8">
    <link rel="stylesheet"
          href="/stylesheets/application.css"
    >
  </head>
  <body>
    <header>
      <h1>
        <a href="/">
          The Ultimate Movie App
        </a>
      </h1>
    </header>
    <main>
      <ul>
        <li class="flash error">
          Movie title must be between 1 and 250 characters
        </li>
      </ul>
      <form action="/reviews/create"
            method="post"
      >
        <dl>
          <dt>
            <label for="title">
              Enter the title of a new movie:
            </label>
          </dt>
          <dd>
            <input type="text"
                   id="title"
                   name="title"
                   placeholder="title"
                   value
            >
          </dd>
          <dt>
            <label for="reviewer">
              Enter your name:
            </label>
          </dt>
          <dd>
            <input type="text"
                   id="reviewer"
                   name="reviewer"
                   placeholder="name"
                   value="Phillips"
            >
          </dd>
          <dt>
            <label for="grade">
              Enter your grade:
            </label>
          </dt>
          <dd>
            <select name="grade">
              <option value
                      disabled
                      selected
              >
                Choose one
              </option>
              <option value="A+">
                A+
              </option>
              <option value="A">
                A
              </option>
              <option value="A-">
                A-
              </option>
              <option value="B+">
                B+
              </option>
              <option value="B">
                B
              </option>
              <option value="B-">
                B-
              </option>
              <option value="C+">
                C+
              </option>
              <option value="C">
                C
              </option>
              <option value="C-">
                C-
              </option>
              <option value="D">
                D
              </option>
              <option value="F">
                F
              </option>
            </select>
          </dd>
          <dt>
            <label for="comments">
              What did you think of the movie?
            </label>
          </dt>
          <dd>
            <textarea id="comments"
                      name="comments"
                      rows="6"
                      cols="80"
                      placeholder="type your comments here"
            >
            </textarea>
          </dd>
        </dl>
        <fieldset class="actions">
          <input type="submit"
                 value="Submit Review"
          >
          <input type="reset"
                 value="Clear Form"
          >
        </fieldset>
      </form>
    </main>
  </body>
</html>
`;

exports[`add a review when: a user wants to view the form to add a review  then: we return the view of the form 1`] = `
<!DOCTYPE html>
<html lang="en-US">
  <head>
    <title>
    </title>
    <meta charset="UTF-8">
    <link rel="stylesheet"
          href="/stylesheets/application.css"
    >
  </head>
  <body>
    <header>
      <h1>
        <a href="/">
          The Ultimate Movie App
        </a>
      </h1>
    </header>
    <main>
      <form action="/reviews/create"
            method="post"
      >
        <dl>
          <dt>
            <label for="title">
              Enter the title of a new movie:
            </label>
          </dt>
          <dd>
            <input type="text"
                   id="title"
                   name="title"
                   placeholder="title"
            >
          </dd>
          <dt>
            <label for="reviewer">
              Enter your name:
            </label>
          </dt>
          <dd>
            <input type="text"
                   id="reviewer"
                   name="reviewer"
                   placeholder="name"
            >
          </dd>
          <dt>
            <label for="grade">
              Enter your grade:
            </label>
          </dt>
          <dd>
            <select name="grade">
              <option value
                      disabled
                      selected
              >
                Choose one
              </option>
              <option value="A+">
                A+
              </option>
              <option value="A">
                A
              </option>
              <option value="A-">
                A-
              </option>
              <option value="B+">
                B+
              </option>
              <option value="B">
                B
              </option>
              <option value="B-">
                B-
              </option>
              <option value="C+">
                C+
              </option>
              <option value="C">
                C
              </option>
              <option value="C-">
                C-
              </option>
              <option value="D">
                D
              </option>
              <option value="F">
                F
              </option>
            </select>
          </dd>
          <dt>
            <label for="comments">
              What did you think of the movie?
            </label>
          </dt>
          <dd>
            <textarea id="comments"
                      name="comments"
                      rows="6"
                      cols="80"
                      placeholder="type your comments here"
            >
            </textarea>
          </dd>
        </dl>
        <fieldset class="actions">
          <input type="submit"
                 value="Submit Review"
          >
          <input type="reset"
                 value="Clear Form"
          >
        </fieldset>
      </form>
    </main>
  </body>
</html>
`;
